changed the body text , tweaked README
changed the body text in README

--- a/WEEK 2 /index week2.html
+++ b/WEEK 2 /index week2.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Exercise week 2 Minh Thuy</title>
 </head>
 <body>
-    <p>I am learning <strong>HTML</strong> and <strong>CSS!</strong></p>
-</body>
+    <h1>Hello HTML!</h1>
+    
 </html>
-
