--- a/WEEK 2 /exercise 2/fruit.html
+++ b/WEEK 2 /exercise 2/fruit.html
@@ -7,22 +7,22 @@
 </head>
 <body>
     <h1>Fruits</h1>
-<img src="banana.png"/> 
-<img src="orange.png"/>  
-<img src="kiwi.png"/>  
-<img src="kiwi.png"/>  
-<img src="apple.png"/> 
+<img src="banana.png" alt="Banana"/> 
+<img src="orange.png" alt="Orange"/>  
+<img src="kiwi.png" alt="Kiwi"/>  
+<img src="kiwi.png" alt="Kiwi"/>  
+<img src="apple.png" alt="Apple"/> 
 <br>
-<img src="apple.png"/> 
-<img src="apple.png"/> 
-<img src="banana.png"/> 
-<img src="kiwi.png"/> 
-<img src="orange.png"/> 
+<img src="apple.png" alt="Apple"/> 
+<img src="apple.png" alt="Aplle"/> 
+<img src="banana.png" alt="Banana"/> 
+<img src="kiwi.png" alt="Kiwi"/> 
+<img src="orange.png" alt="Orange"/> 
 <br>
-<img src="orange.png"/> 
-<img src="banana.png"/> 
-<img src="orange.png"/> 
-<img src="orange.png"/> 
-<img src="apple.png"/> 
+<img src="orange.png" alt="Orange"/> 
+<img src="banana.png" alt="Banana"/> 
+<img src="orange.png" alt="Orange"/> 
+<img src="orange.png" alt="Orange"/> 
+<img src="apple.png" alt="Apple"/> 
 </body>
 </html>
