added tweak README

--- a/WEEK6/Lab7&8-ex3.html
+++ b/WEEK6/Lab7&8-ex3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Flower Gallery</title>
-    <link rel="stylesheet" type="text/css" href="ex4.css">
+    <link rel="stylesheet" type="text/css" href="Lab7&8-ex3.css">
     </style>
 </head>
 <body>
