--- a/WEEK6/extra-ex2.html
+++ b/WEEK6/extra-ex2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Navigation Bar</title>
-    <link rel="stylesheet" type="text/css" href="ex6.css">
+    <link rel="stylesheet" type="text/css" href="extra-ex2.css">
     <header id="header">
         <div id="logo"><img src="logo.gif" width="191" height="66" alt="Flower Shop" /></div>
         <nav id="menu_top">
