--- a/WEEK6/Lab7&8-ex1.html
+++ b/WEEK6/Lab7&8-ex1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>The priority of selectors</title>
-    <link rel="stylesheet" type="text/css" href="ex3.css">
+    <link rel="stylesheet" type="text/css" href="Lab7&8-ex1.css">
 </head>
 <body>
     <MyCustomizeTag>Here is customize tag</MyCustomizeTag>
