--- a/WEEK6/extra-ex1.html
+++ b/WEEK6/extra-ex1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Left menu</title>
-    <link rel="stylesheet" type="text/css" href="ex5.css">
+    <link rel="stylesheet" type="text/css" href="extra-ex1.css">
 </head>
 <body>
     <div class="menu">
