--- a/WEEK7/photo-shoot-effect.html
+++ b/WEEK7/photo-shoot-effect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Shoot Effect</title>
-    <link rel="stylesheet" href="photo-shoot-effect.css"> <!-- Assuming the CSS is in a file named styles.css -->
+    <link rel="stylesheet" href="photo-shoot-effect.css"> 
 </head>
 <body>
     <header>
