--- a/WEEK7/ancient-architecture.html
+++ b/WEEK7/ancient-architecture.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ancient Architecture</title>
-    <link rel="stylesheet" href="Ancient-architecture.css"> 
+    <link rel="stylesheet" href="ancient-architecture.css"> 
 </head>
 <body>
     <nav>
